<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainPortraitView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_primarymemorizer"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/header_choose_aof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/first_activity_heading"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/aof_spinner"
        style="@style/mediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header_choose_aof"
        android:layout_marginTop="20dp"
        android:entries="@array/aof_names"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="10dp"
        android:prompt="@string/aof_prompt" />

    <Button
        android:id="@+id/btn_mask"
        style="@style/main_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/button_send" />

    <EditText
        android:id="@+id/edit_numOfWordsToRemove"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_mask"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:ems="20"
        android:hint="@string/edit_numOfWordsToRemove"
        android:inputType="number"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/difficulty_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_numOfWordsToRemove"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_easy"
            style="@style/easy_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="0.33"
            android:text="@string/button_easy" />

        <Button
            android:id="@+id/btn_medium"
            style="@style/med_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="0.34"
            android:text="@string/button_medium" />

        <Button
            android:id="@+id/btn_hard"
            style="@style/hard_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="0.33"
            android:text="@string/button_hard" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollViewOutputMsg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/difficulty_layout"
        android:layout_below="@+id/aof_spinner"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/output_view"
                style="@style/mediumText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/output_text_hint"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>